// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expanded depth nested object static given initial level set to 0, should render top 2 levels 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>bar</div>
            <span>object</span>
            <div>{3}</div>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>foo</div>
            <span>array[object]</span>
            <div>{2}</div>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Expanded depth nested object static given initial level set to 1, should render top 3 levels 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>bar</div>
            <span>object</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>barFoo</div>
            <span>object</span>
            <div>{1}</div>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>barBar</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>barBaz</div>
            <span>boolean</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>foo</div>
            <span>array[object]</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>fooBar</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>fooFoo</div>
            <span>number</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Expanded depth nested object static given initial level set to 2, should render top 4 levels 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>bar</div>
            <span>object</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>barFoo</div>
            <span>object</span>
            <div>{1}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>barFooBar</div>
            <span>object</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>barBar</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>barBaz</div>
            <span>boolean</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>foo</div>
            <span>array[object]</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>fooBar</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>fooFoo</div>
            <span>number</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given anyOf combiner placed next to allOf given allOf merging disabled, should preserve both combiners 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div><span>anyOf</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div><span>allOf</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>type</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>\\"admin\\"</span>
          <span>\\"editor\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>enabled</div>
            <span>boolean</span>
          </div>
        </div>
        <div><div title=\\"Is this account enabled\\">Is this account enabled</div></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div style=\\"top: -9px; height: 1px\\"><div>and</div></div>
          <div>
            <span>Admin</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>root</div>
            <span>boolean</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>group</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>expirationDate</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div style=\\"top: -9px; height: 1px\\"><div>and/or</div></div>
          <div><span>allOf</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>type</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>\\"admin\\"</span>
          <span>\\"editor\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>enabled</div>
            <span>boolean</span>
          </div>
        </div>
        <div><div title=\\"Is this account enabled\\">Is this account enabled</div></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div style=\\"top: -9px; height: 1px\\"><div>and</div></div>
          <div>
            <span>Editor</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>supervisor</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>key</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given anyOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div><span>anyOf</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>Admin</span>
            <div>{5}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>type</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>\\"admin\\"</span>
          <span>\\"editor\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>enabled</div>
            <span>boolean</span>
          </div>
        </div>
        <div><div title=\\"Is this account enabled\\">Is this account enabled</div></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>root</div>
            <span>boolean</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>group</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>expirationDate</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div style=\\"top: -9px; height: 1px\\"><div>and/or</div></div>
          <div>
            <span>Editor</span>
            <div>{4}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>type</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>\\"admin\\"</span>
          <span>\\"editor\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>enabled</div>
            <span>boolean</span>
          </div>
        </div>
        <div><div title=\\"Is this account enabled\\">Is this account enabled</div></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>supervisor</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>key</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given oneOf combiner placed next to allOf given allOf merging disabled, should preserve both combiners 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div><span>oneOf</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div><span>allOf</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>type</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>\\"admin\\"</span>
          <span>\\"editor\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>enabled</div>
            <span>boolean</span>
          </div>
        </div>
        <div><div title=\\"Is this account enabled\\">Is this account enabled</div></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div style=\\"top: -9px; height: 1px\\"><div>and</div></div>
          <div>
            <span>Admin</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>root</div>
            <span>boolean</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>group</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>expirationDate</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div style=\\"top: -9px; height: 1px\\"><div>or</div></div>
          <div><span>allOf</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>type</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>\\"admin\\"</span>
          <span>\\"editor\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>enabled</div>
            <span>boolean</span>
          </div>
        </div>
        <div><div title=\\"Is this account enabled\\">Is this account enabled</div></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div style=\\"top: -9px; height: 1px\\"><div>and</div></div>
          <div>
            <span>Editor</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>supervisor</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>key</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given oneOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div><span>oneOf</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>Admin</span>
            <div>{5}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>type</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>\\"admin\\"</span>
          <span>\\"editor\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>enabled</div>
            <span>boolean</span>
          </div>
        </div>
        <div><div title=\\"Is this account enabled\\">Is this account enabled</div></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>root</div>
            <span>boolean</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>group</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>expirationDate</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div style=\\"top: -9px; height: 1px\\"><div>or</div></div>
          <div>
            <span>Editor</span>
            <div>{4}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>type</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>\\"admin\\"</span>
          <span>\\"editor\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>enabled</div>
            <span>boolean</span>
          </div>
        </div>
        <div><div title=\\"Is this account enabled\\">Is this account enabled</div></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>supervisor</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>key</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match arrays/of-allofs.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>Test</span>
            <div>{1}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>array-all-objects</div>
            <span>array[object]</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>foo</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>bar</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match arrays/of-arrays.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>array[object]</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>bar</div>
            <span>integer</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>foo</div>
            <span>array[array]</span>
            <div>{0}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match arrays/of-objects.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>object</span>
            <div>{1}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>propertyIsArrayOfObjects</div>
            <span>array[object]</span>
            <div>{1}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>ArrayObjectProperty</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match arrays/of-refs.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div><span>$ref(./models/todo-full.json)[]</span></div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match arrays/with-multiple-arrayish-items.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>array</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div><span>number</span></div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>object</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>code</div>
            <span>number</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>msg</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>ref</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match arrays/with-ordered-items.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>array</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div><span>number</span></div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div><span>string</span></div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match arrays/with-single-arrayish-items.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>array[object]</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>code</div>
            <span>number</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>msg</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>ref</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match combiners/allOfs/base.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>object</span>
            <div>{5}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>AllOfMergeObjects</div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>Object1Property</div>
            <span>string</span>
          </div>
        </div>
        <div><span>&gt;= 1 characters</span></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>Object2Property</div>
            <span>number</span>
          </div>
        </div>
        <div><span>&lt;= 2</span></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>AllOfMergeValidations</div>
            <span>string</span>
          </div>
        </div>
        <div>
          <span>&gt;= 1 characters</span>
          <span>&lt;= 2 characters</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>AllOfMergeTakeMoreLogicalValidation</div>
            <span>number</span>
          </div>
        </div>
        <div><span>&lt;= 1</span></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>AllOfMergeObjectPropertyValidations</div>
            <span>object</span>
            <div>{1}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>Property</div>
            <span>string</span>
          </div>
        </div>
        <div>
          <span>&gt;= 1 characters</span>
          <span>&lt;= 2 characters</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>AllOfMergeRefs</div>
            <span>object</span>
            <div>{4}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>street_address</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>city</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>state</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>zipCode</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match combiners/allOfs/complex.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>foo</div>
            <span>object</span>
            <div>{1}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>user</div>
            <span>allOf</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 80px\\">
        <div>
          <div>
            <div>names</div>
            <span>$ref(#/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/name)[]</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 80px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>users</div>
            <span>array[object]</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 100px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>creation</div>
            <span>object</span>
            <div>{1}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 120px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>user</div>
            <span>allOf</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 140px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 160px\\">
        <div>
          <div>
            <div>names</div>
            <span>$ref(#/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/name)[]</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 160px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>users</div>
            <span>array[object]</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 180px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>creation</div>
            <span>object</span>
            <div>{1}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 200px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>user</div>
            <span>allOf</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 220px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 240px\\">
        <div>
          <div>
            <div>names</div>
            <span>$ref(#/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/name)[]</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 240px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>users</div>
            <span>array</span>
            <div>{1}</div>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 180px\\">
        <div>
          <div>
            <div>foo</div>
            <span>#/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/contacts</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 180px\\">
        <div>
          <div>
            <div>products</div>
            <span>#/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/contacts</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 100px\\">
        <div>
          <div>
            <div>foo</div>
            <span>#/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/contacts</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 100px\\">
        <div>
          <div>
            <div>products</div>
            <span>#/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/contacts</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match combiners/allOfs/todo-full.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>Todo Partial[]</span>
            <div>{7}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>name</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>completed</div>
            <div>
              <span>boolean</span>
              <span>or</span>
              <span>null</span>
            </div>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>id</div>
            <span>integer</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>&gt;= 0</span>
          <span>&lt;= 1000000</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>completed_at</div>
            <div>
              <span>string</span>
              <span>or</span>
              <span>null</span>
            </div>
            <span>&lt;date-time&gt;</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>created_at</div>
            <span>string</span>
            <span>&lt;date-time&gt;</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>updated_at</div>
            <span>string</span>
            <span>&lt;date-time&gt;</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>user</div>
            <span>User</span>
            <div>{2}</div>
          </div>
          <span>required</span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>name</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div><div title=\\"The user's full name.\\">The user's full name.</div></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>age</div>
            <span>number</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>&gt;= 0</span>
          <span>&lt;= 150</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match combiners/allOfs/todo-full-2.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>Todo Full</span>
            <div>{5}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>test</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>id</div>
            <span>integer</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>&gt;= 0</span>
          <span>&lt;= 1000000</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>completed_at</div>
            <div>
              <span>string</span>
              <span>or</span>
              <span>null</span>
            </div>
            <span>&lt;date-time&gt;</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>created_at</div>
            <span>string</span>
            <span>&lt;date-time&gt;</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>updated_at</div>
            <span>string</span>
            <span>&lt;date-time&gt;</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match combiners/allOfs/with-type.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div><span>oneOf</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>BugExample</span>
            <div>{6}</div>
          </div>
        </div>
        <div><div title=\\"An example model to demonstrate a bug.\\">An example model to demonstrate a bug.</div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>actionType</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>\\"Cancel\\"</span>
          <span>\\"Confirm\\"</span>
          <span>\\"Update\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>id</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <div title=\\"The identifier of the existing reservation.\\">The identifier of the existing reservation.</div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>externalId</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>calculateCosts</div>
            <span>boolean</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>calculateDates</div>
            <span>boolean</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>items</div>
            <span>array[string]</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div style=\\"top: -9px; height: 1px\\"><div>or</div></div>
          <div>
            <span>BugExample</span>
            <div>{6}</div>
          </div>
        </div>
        <div><div title=\\"An example model to demonstrate a bug.\\">An example model to demonstrate a bug.</div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>actionType</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <span>Allowed value:</span>
          <span>\\"Create\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>id</div>
            <span>string</span>
          </div>
        </div>
        <div>
          <div title=\\"The identifier of the existing reservation.\\">The identifier of the existing reservation.</div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>externalId</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>calculateCosts</div>
            <span>boolean</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>calculateDates</div>
            <span>boolean</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>items</div>
            <span>array[string]</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match combiners/oneof-with-array-type.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div><span>oneOf</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>array[object]</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>foo</div>
            <span>string</span>
          </div>
        </div>
        <div>
          <span>Allowed value:</span>
          <span>\\"test\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>baz</div>
            <span>integer</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div style=\\"top: -9px; height: 1px\\"><div>or</div></div>
          <div>
            <span>array[object]</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>foo</div>
            <span>number</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>baz</div>
            <span>integer</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>bar</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match default-schema.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>User</span>
            <div>{11}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>name</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div>
          <div
            title=\\"The user's full name. This description can be long and should truncate once it reaches the end of the row. If it's not truncating then theres and issue that needs to be fixed. Help!\\"
          >
            The user's full name. This description can be long and should truncate once it reaches the end of the row.
            If it's not truncating then theres and issue that needs to be fixed. Help!
          </div>
        </div>
        <div>
          <span>Example values:</span>
          <span>\\"Example name\\"</span>
          <span>\\"Different name\\"</span>
        </div>
        <div>
          <span>Allowed value:</span>
          <span>\\"Constant name\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>age</div>
            <span>number</span>
          </div>
          <span>read-only</span>
          <span>required</span>
        </div>
        <div>
          <span>&gt;= 10</span>
          <span>&lt;= 40</span>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>10</span>
          <span>20</span>
          <span>30</span>
          <span>40</span>
        </div>
        <div>
          <span>Default value:</span>
          <span>20</span>
        </div>
        <div>
          <span>Multiple of:</span>
          <span>10</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>completed_at</div>
            <span>string</span>
            <span>&lt;date-time&gt;</span>
          </div>
          <span>write-only</span>
          <span>required</span>
        </div>
        <div>
          <span>Match pattern:</span>
          <span>^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>items</div>
            <div>
              <span>null</span>
              <span>or</span>
              <span>array[string,number]</span>
            </div>
          </div>
        </div>
        <div>
          <div
            title=\\"This description can be long and should truncate once it reaches the end of the row. If it's not truncating then theres and issue that needs to be fixed. Help!\\"
          >
            This description can be long and should truncate once it reaches the end of the row. If it's not truncating
            then theres and issue that needs to be fixed. Help!
          </div>
        </div>
        <div>
          <span>&gt;= 1 items</span>
          <span>&lt;= 4 items</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>email</div>
            <span>string</span>
            <span>&lt;email&gt;</span>
          </div>
          <span>deprecated</span>
        </div>
        <div><span>&gt;= 2 characters</span></div>
        <div>
          <span>Default value:</span>
          <span>\\"default@email.com\\"</span>
        </div>
        <div>
          <span>Example values:</span>
          <span>\\"one@email.com\\"</span>
          <span>\\"two@email.com\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>plan</div>
            <span>anyOf</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
        <div>
          <span>Example value:</span>
          <span>\\"hi\\"</span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>foo</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>bar</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match formats-schema.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>model-with-formats</span>
            <div>{5}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>date-of-birth</div>
            <div>
              <span>number</span>
              <span>or</span>
              <span>string</span>
              <span>or</span>
              <span>array</span>
            </div>
            <span>&lt;date-time&gt;</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>name</div>
            <span>string</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>id</div>
            <span>number</span>
            <span>&lt;float&gt;</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>notype</div>
            <span>&lt;date-time&gt;</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>permissions</div>
            <div>
              <span>string</span>
              <span>or</span>
              <span>object</span>
            </div>
            <div>{1}</div>
            <span>&lt;password&gt;</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>ids</div>
            <span>array[integer]</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match references/base.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>object</span>
            <div>{2}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>billing_address</div>
            <span>object</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>street_address</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>city</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>state</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>shipping_address</div>
            <span>object</span>
            <div>{3}</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>street_address</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>city</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>state</div>
            <span>string</span>
          </div>
          <span>required</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match references/nullish.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div><span>object</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>empty-ref</div>
            <span>$ref</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output should match tickets.schema.json 1`] = `
"<div>
  <div>
    <div>
      <div style=\\"margin-left: 0px\\">
        <div>
          <div>
            <span>object</span>
            <div>{3}</div>
          </div>
        </div>
        <div>
          <div title=\\"This section allows the selection of the ticketing options for all sales of the order.\\">
            This section allows the selection of the ticketing options for all sales of the order.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>availableTicketingOptions</div>
            <span>$ref(../TicketingOptionInfo/TicketingOptionInfo.v1-0.yaml)[]</span>
          </div>
        </div>
        <div><div title=\\"List of ticketing options of the order.\\">List of ticketing options of the order.</div></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div>
            <div>commonTicketingOptions</div>
            <span>array[string]</span>
          </div>
        </div>
        <div>
          <div title=\\"Common ticketing options to all order items.\\">Common ticketing options to all order items.</div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 20px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>ticketingOptionChoice</div>
            <span>array[object]</span>
            <div>{2}</div>
          </div>
        </div>
        <div>
          <div title=\\"Ticketing option selection per order item.\\">Ticketing option selection per order item.</div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div>
            <div>state</div>
            <span>string</span>
          </div>
        </div>
        <div>
          <div
            title=\\"The status that addresses if a specific ticket option is active or not. The status active is used before ticketing or before exchange confirmation. After ticketing, the status changes in completed. This allows to store ticketing options already used at ticketing time and to clean up all non selected options after ticketing or exchanged confirmation.\\"
          >
            The status that addresses if a specific ticket option is active or not. The status active is used before
            ticketing or before exchange confirmation. After ticketing, the status changes in completed. This allows to
            store ticketing options already used at ticketing time and to clean up all non selected options after
            ticketing or exchanged confirmation.
          </div>
        </div>
        <div>
          <span>Allowed values:</span>
          <span>\\"COMPLETED\\"</span>
          <span>\\"ACTIVE\\"</span>
        </div>
        <div>
          <span>Default value:</span>
          <span>\\"ACTIVE\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 40px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>orderItemBreakdown</div>
            <span>array[object]</span>
            <div>{2}</div>
          </div>
        </div>
        <div>
          <div title=\\"Structure that contains ticketing options per order item.\\">
            Structure that contains ticketing options per order item.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div>
            <div>orderItemId</div>
            <span>string</span>
            <span>&lt;uuid&gt;</span>
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 60px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>options</div>
            <span>array[object]</span>
            <div>{4}</div>
          </div>
        </div>
        <div>
          <div title=\\"Available ticketing options for a given order item.\\">
            Available ticketing options for a given order item.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 80px\\">
        <div>
          <div>
            <div>title</div>
            <span>string</span>
          </div>
          <span>read-only</span>
        </div>
        <div><div title=\\"Ticketing option short-description.\\">Ticketing option short-description.</div></div>
        <div>
          <span>Allowed values:</span>
          <span>\\"HOMEPRINT\\"</span>
          <span>\\"TICKETLESS\\"</span>
          <span>\\"PRINT_AT_KIOSK\\"</span>
          <span>\\"SECURE_PAPER\\"</span>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 80px\\">
        <div>
          <div>
            <div>selected</div>
            <span>boolean</span>
          </div>
        </div>
        <div>
          <div title=\\"Flag to specify which ticketing option is selected. Only one option is allowed to be selected.\\">
            Flag to specify which ticketing option is selected. Only one option is allowed to be selected.
          </div>
        </div>
        <div><span>example</span></div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 80px\\">
        <div>
          <div>
            <div>additionalRequiredInfo</div>
            <span>string</span>
          </div>
        </div>
        <div>
          <div title=\\"Additional passenger required info specific to the given ticketing option.\\">
            Additional passenger required info specific to the given ticketing option.
          </div>
        </div>
        <div style=\\"height: 1px\\"><div style=\\"height: 1px; background-color: lightgray\\"></div></div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div style=\\"margin-left: 80px\\">
        <div>
          <div style=\\"width: 20px; height: 20px; left: -23.5px\\" role=\\"button\\"></div>
          <div>
            <div>deliveryInfo</div>
            <span>object</span>
            <div>{5}</div>
          </div>
        </div>
        <div><div title=\\"Data for ticket delivery.\\">Data for ticket delivery.</div></div>
      </div>
    </div>
  </div>
</div>
"
`;
